--- a/index.css
+++ b/index.css
@@ -2,20 +2,57 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #86c4d6;
+    /* flex-wrap: wrap; */
+    /* background-image: linear-gradient(326deg, #861657 0%, #ffa69e 74%); */
 }
 
 body {
+    width: 100%;
     font-family: "Lato", sans-serif;
+    color: midnightblue;
 }
 
 h2 {
-    font-size: 5rem;
+    font-size: 8rem;
     font-weight: bold;
+    padding-bottom: 1rem;
+    font-family: 'Allison', cursive;
+    
+}
+
+footer {
+    font-weight:bold;
+    text-align: center;
+    font-family: 'Allison', cursive;
+    font-size: 3em;
+    padding-top: 3rem;
     
 }
 
 .coming-soon {
     min-height: 100vh;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.countdown {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding-bottom: 7rem;
+
+}
+
+.day,.hour,.minute,.second {
+    font-size: 3rem;
+}
+
+.mylove {
+    height: 50vh;
+    border-radius: 50%;
+    border: midnightblue solid 10px;
     
 }
